--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <h1>Abuela Sorda</h1>
 	Di algo Abuela:
-<form action="/habla" method="post">
+<form action="/habl" method="post">
 	<input type="text" name="algo" required>
 	<input type="submit" value="Dilo!">
 </form>
